Add Warrior feature that grants +1 to evasion if shield is equipped, and fix some bugs with evasion bonus calculation